test-cases/negative/test_048_missing_property_in_object.lay
# negative test: missing required property in object
# expected: error should be thrown

define class Person
  the property name of type String

the variable person of type Person is a new Person with


